--- a/qgis_basemaps.ipynb
+++ b/qgis_basemaps.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sources = []\n",
     "for basemap in maps:\n",
-    "    if maps[basemap]['type'] == 'xyz' and (\"Staida\" not in basemap):\n",
+    "    if maps[basemap]['type'] == 'xyz' and (\"Stadia\" not in basemap):\n",
     "        source = []\n",
     "        source.append(\"connections-xyz\")\n",
     "        source.append(basemap)\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
