Add video tutorial

--- a/qgis_basemaps.ipynb
+++ b/qgis_basemaps.ipynb
@@ -115,6 +115,8 @@
     "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/zmin\", source[8])\n",
     "\n",
     "iface.reloadConnections()\n",
+    "\n",
+    "print(\"All basemaps have been added. Please restart QGIS.\")\n",
     "\"\"\"\n",
     "    f.write(footer)"
    ]
