Add WMS basemaps

--- a/qgis_basemaps.ipynb
+++ b/qgis_basemaps.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import leafmap"
+    "import leafmap\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -53,7 +54,8 @@
     "        source.append(\"\")\n",
     "        source.append(\"30\")\n",
     "        source.append(\"0\")\n",
-    "        sources.append(source)"
+    "        sources.append(source)\n",
+    "xyz_count = len(sources)"
    ]
   },
   {
@@ -62,7 +64,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"The number of basemaps is {len(sources)}.\")"
+    "print(f\"The number of XYZ basemaps is {len(sources)}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for basemap in maps:\n",
+    "#     if maps[basemap]['type'] == 'wms':\n",
+    "#         source = []\n",
+    "#         source.append(\"connections-wms\")\n",
+    "#         source.append(basemap)\n",
+    "#         source.append(maps[basemap]['url'].replace(\"?\", \"\"))\n",
+    "#         source.append(maps[basemap]['attribution'][:50])\n",
+    "#         source.append(\"30\")\n",
+    "#         source.append(\"0\")\n",
+    "#         sources.append(source)\n",
+    "# wms_count = len(sources) - xyz_count    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"wms_basemaps.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, row in df.iterrows():\n",
+    "    source = []\n",
+    "    source.append(\"connections-wms\")\n",
+    "    source.append(row['name'].strip())\n",
+    "    source.append(row['url'].strip())\n",
+    "    source.append(row['referer'].strip())\n",
+    "    source.append(\"30\".strip())\n",
+    "    source.append(\"0\".strip())\n",
+    "    sources.append(source)\n",
+    "wms_count = len(sources) - xyz_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"The number of WMS basemaps is {wms_count}.\")"
    ]
   },
   {
@@ -75,17 +133,14 @@
     "\n",
     "    header = \"\"\"\n",
     "# This script is inspired by Klas Karlsson at https://bit.ly/4eDbx1O. Credit to Klas Karlsson.\n",
-    "# I expaned the script to include more basemaps from xyzservices\\n\\n\n",
+    "# I expaned the script to include more XYZ basemaps from xyzservices and a lot of WMS basemaps.\\n\\n\n",
     "\"\"\"\n",
     "    f.write(header)\n",
     "\n",
     "    f.write(\"from qgis.PyQt.QtCore import QSettings\\n\")\n",
-    "    f.write(\"from qgis.utils import iface\\n\\n\")\n",
+    "    f.write(\"from qgis.utils import iface\\n\")\n",
+    "    f.write(\"print('Adding basemaps to QGIS now. Please wait ...')\\n\\n\")\n",
     "    f.write(\"sources = []\\n\")\n",
-    "\n",
-    "    for source in sources:\n",
-    "        line = f\"sources.append({str(source)})\\n\"\n",
-    "        f.write(line)\n",
     "\n",
     "    bing_maps = [\n",
     "        \"connections-xyz\",\n",
@@ -101,18 +156,29 @@
     "    line = f\"sources.append({str(bing_maps)})\\n\"\n",
     "    f.write(line)\n",
     "\n",
+    "    for source in sources:\n",
+    "        line = f\"sources.append({str(source)})\\n\"\n",
+    "        f.write(line)\n",
+    "\n",
     "    footer = \"\"\"\n",
     "for source in sources:\n",
     "    connectionType = source[0]\n",
     "    connectionName = source[1]\n",
     "    \n",
-    "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/authcfg\", source[2])\n",
-    "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/password\", source[3])\n",
-    "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/referer\", source[4])\n",
-    "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/url\", source[5])\n",
-    "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/username\", source[6])\n",
-    "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/zmax\", source[7])\n",
-    "    QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/zmin\", source[8])\n",
+    "    if connectionType == \"connections-xyz\":\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/authcfg\", source[2])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/password\", source[3])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/referer\", source[4])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/url\", source[5])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/username\", source[6])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/zmax\", source[7])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/zmin\", source[8])\n",
+    "    elif connectionType == \"connections-wms\":\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/url\", source[2])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/referer\", source[3])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/zmax\", source[4])\n",
+    "        QSettings().setValue(f\"qgis/{connectionType}/{connectionName}/zmin\", source[5])\n",
+    "    \n",
     "\n",
     "iface.reloadConnections()\n",
     "\n",
@@ -138,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
